--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "images/animeicon192x192.png",
+      "src": "images/animeicon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/animeicon512x512.png",
+      "src": "images/animeicon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
